<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity"
    android:background="@drawable/background_default">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <ImageView android:id="@+id/fanfoudroid_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="25dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/fanfoudroid_logo"
            android:layout_alignBottom="@id/fanfoudroid_logo"
            android:paddingBottom="8dp"
            />
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="30dp">
        <TableRow >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/register_label_nickname" />
            <EditText
                android:id="@+id/etSgAccount"
                android:maxLength="20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/register_label_password"
                />
            <EditText
                android:id="@+id/etSgPassword"
                android:maxLength="20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/register_label_re_password"
                />
            <EditText
                android:id="@+id/etSgRePassword"
                android:maxLength="20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow >
            <ImageView
                android:id="@+id/head"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:foregroundGravity="center"
                android:src="@drawable/teacher"
                />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onRegister"
        android:text="@string/register_label_register" />

</LinearLayout>