<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@drawable/background_default">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_default">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <ImageView android:id="@+id/fanfoudroid_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="25dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/fanfoudroid_logo"
                android:layout_alignBottom="@id/fanfoudroid_logo"
                android:paddingBottom="8dp"
                />
        </RelativeLayout>
        <!-- 登录框 -->
        <RelativeLayout
            android:id="@+id/login_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:background="@drawable/background_rectangle">

            <!-- 用户名 text -->
            <TextView
                android:id="@+id/login_user_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/login_label_username"/>

            <!--  TODO: disable auto correct. -->
            <!-- 用户名 input -->
            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_user_input"
                android:inputType="text"
                />
            <!-- 密码 text -->
            <TextView
                android:id="@+id/login_password_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userName"
                android:layout_marginTop="3dp"
                android:text="@string/login_label_password"
                />
            <!-- 密码 input -->
            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password_input"
                android:inputType="textPassword"
                />
            <!-- 登陆 button -->
            <Button
                android:id="@+id/login"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/pwd"
                android:layout_alignLeft="@id/pwd"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/login_label_login"
                />
            <!-- 注册button -->
            <Button
                android:id="@+id/registerbtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/pwd"
                android:layout_alignRight="@id/pwd"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/login_label_regist"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>